--- a/fct/resources.qrc
+++ b/fct/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
   <qresource prefix="/plugins/FluvialToolbox" >
-     <file>icon.png</file>
+     <file>images/icon.png</file>
   </qresource>
 </RCC>
